--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
     "dotenv": "^16.1.4",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
-    "mongoose-paginate": "^5.0.3",
-    "mongoose-paginate-v2": "^1.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -59,6 +57,9 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "engines": {
+    "node": ">=18.16.0"
   },
   "jest": {
     "moduleFileExtensions": [
